# minamoto-wallet

./: .gitignore  AUDIT.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  STATUS.md  WALLET_DESIGN.md  ZK_ROADMAP.md  entitlements.plist
.cargo/: config.toml
src/: balance.rs  biometric.rs  confidential_address.rs  consts.rs  delete_challenge.rs  indexer.rs  main.rs  merkle.rs  password.rs  prover.rs  secure_enclave.rs  session.rs  shield.rs  storage.rs  torii.rs  transfer.rs  ui.rs  ui_index.html  wallet.rs  zk_v2.rs
